--- a/css/nav.css
+++ b/css/nav.css
@@ -1,71 +1,76 @@
 #main-nav {
+  display: flex;
+  /* flex-wrap: wrap; */
+  flex-direction: row;
   background-color: rgb(0, 0, 0);
-  text-transform: uppercase;
-  height: 7vh;
-  grid-area: "nav";
-  display: grid;
-  grid-template-areas:
-    "h1 top top"
-    "h1 free search"
-    "h1 bot search";
-  grid-template-columns: 30% 1fr 30%;
-  grid-template-rows: 30% 1fr 30%;
-  grid-gap: 0;
+  color: rgb(255, 107, 0);
+}
+
+#main-nav .links {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  /* flex-grow: 4; */
 }
 
 #main-nav .logo {
-  color: rgb(255, 84, 0);
-  grid-area: "h1";
-  /* background-color: rgb(26, 28, 207); */
-  grid-row-start: 1;
-  grid-row-end: 4;
-  grid-column-start: 1;
-  grid-column-end: 1;
-  text-align: center;
-  text-align: center;
+  display: flex;
+  flex-grow: 1;
+  max-width: 200px;
+  align-items: center;
+  justify-content: center;
 }
 
 #main-nav .logo .in {
-  text-align: center;
-  margin-top: 0.7vh;
-  -webkit-transform: scale(1, 1.2);
-  -moz-transform: scale(1, 1.2);
-  /* Firefox */
-  -ms-transform: scale(1, 1.2);
-  /* IE 9 */
-  -o-transform: scale(1, 1.2);
-  /* Opera */
-  font-size: 2em;
-  font-weight: 600;
-  text-align: inherit;
-}
+  font-size: 30px;
+  font-weight: 900;
+  transform: scale(1,1.2 );
 
-.logo span {
-  margin: 0.6em;
+}
+#main-nav .logo .in span{
+  margin: 0 7px;
 }
 
 #main-nav .top-links {
-  grid-area: "top-links";
-  /* background-color: rgb(234, 14, 246); */
-  grid-row-start: 1;
-  grid-row-end: 1;
-  grid-column-start: 2;
-  grid-column-end: 4;
-  text-align: right;
+  display: inline-flex;
+  /* flex-wrap: wrap; */
+  /* order: 0; */
+  flex-grow: 1;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 600;
+  /* margin-right: 20px; */
+  background: linear-gradient(175deg, rgb(0, 0, 0),rgba(116, 116, 116, 0.25));
 }
 
 #main-nav .bot-links {
-  /* background-color: rgb(221, 198, 31); */
-  grid-row-start: 3;
-  grid-row-end: 3;
-  grid-column-start: 2;
-  grid-column-end: 2;
+  display: inline-flex;
+  flex-grow: 1;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 600;
+  margin-left: 20px;
 }
-#main-nav a{
-  color: rgb(255, 84, 0);
+
+#main-nav a {
+  color: inherit;
   text-decoration: none;
 }
-#main-nav .delimiter{
-  color: rgb(255, 84, 0);
-  margin: 1em;
+
+#main-nav div {
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+#main-nav .delimiter {
+  margin: 0 10px;
+}
+
+#log-in {
+  margin-left: 20px;
+}
+#main-nav i{
+  padding-left:  5px;
+  padding-right: 8px;
 }
