--- a/css/body.css
+++ b/css/body.css
@@ -4,7 +4,7 @@ body{
     "nav"
     "div"
     "footer";
-    grid-template-rows: 10% 1fr 10%;
+    grid-template-rows: 60px 1fr 10%;
     grid-gap: 0px;
     height: 100vh;
     margin: 0;
