--- a/css/body.css
+++ b/css/body.css
@@ -9,3 +9,22 @@ body{
     height: 100vh;
     margin: 0;
 }
+
+
+body {
+overflow:hidden;
+margin:0;
+padding:0;
+}
+#bubbles {
+background:#477ab9;
+width:100%;
+-webkit-transition: all 0.4s ease-in-out;
+-moz-transition: all 0.4s ease-in-out;
+-ms-transition: all 0.4s ease-in-out;
+-o-transition: all 0.4s ease-in-out;
+transition: all 0.4s ease-in-out;
+}
+#bubbles:hover {
+background:#3D689C;
+}
