--- a/css/body.css
+++ b/css/body.css
@@ -11,20 +11,16 @@ body{
 }
 
 
-body {
-overflow:hidden;
-margin:0;
-padding:0;
-}
-#bubbles {
+.bubbles {
 background:#477ab9;
 width:100%;
+height: 100%;
 -webkit-transition: all 0.4s ease-in-out;
 -moz-transition: all 0.4s ease-in-out;
 -ms-transition: all 0.4s ease-in-out;
 -o-transition: all 0.4s ease-in-out;
 transition: all 0.4s ease-in-out;
 }
-#bubbles:hover {
+.bubbles:hover {
 background:#3D689C;
 }
