--- a/css/body.css
+++ b/css/body.css
@@ -12,7 +12,7 @@ body{
 
 
 .bubbles {
-background:#477ab9;
+background:#3dd924;
 width:100%;
 height: 100%;
 -webkit-transition: all 0.4s ease-in-out;
@@ -22,5 +22,5 @@ height: 100%;
 transition: all 0.4s ease-in-out;
 }
 .bubbles:hover {
-background:#3D689C;
+background:#3dd924;
 }
