--- a/css/body.css
+++ b/css/body.css
@@ -12,7 +12,7 @@ body{
 
 
 .bubbles {
-background:#3dd924;
+background:#000000;
 width:100%;
 height: 150%;
 -webkit-transition: all 0.4s ease-in-out;
@@ -23,5 +23,5 @@ transition: all 0.4s ease-in-out;
 position: absolute;
 }
 .bubbles:hover {
-background:rgb(0, 29, 255);
+background:rgb(96, 46, 140);
 }
