--- a/css/container.css
+++ b/css/container.css
@@ -1,4 +1,15 @@
-#main-container{
-height: 1000px;
+#main-container {
+  height: 100vh;
   /* background-color: rgb(255, 57, 0); */
+}
+
+.anime {
+  margin: auto;
+  background-color: #222;
+  width: 100%;
+  height: 100vh;
+  display: block;
+  position: absolute;
+  top:60px;
+  background-repeat: repeat-y;
 }
