--- a/back_end/mainApp/static/mainApp/css/imports.css
+++ b/back_end/mainApp/static/mainApp/css/imports.css
@@ -5,3 +5,12 @@
 @import "login.css" all;
 @import "nav.css" all;
 @import "bootstrap.min.css" all;
+
+.ll {
+  width: 200px;
+  height: 300px;
+  background-color: rgb(0, 255, 152);
+  position: absolute;
+  top: 0;
+  left: : 0;
+}
