--- a/back_end/mainApp/static/mainApp/css/login.css
+++ b/back_end/mainApp/static/mainApp/css/login.css
@@ -28,6 +28,9 @@
 .registration {
   /* width: 100px; */
   height: 100vh;
-  ;
-  background-color: rgb(255, 0, 0);
+  background-color: rgb(77, 77, 77);
+  padding: 50px;
+}
+.registration .btn {
+  margin-top: 10px;
 }
