--- a/back_end/mainApp/templates/front_end/includes/login_form.html
+++ b/back_end/mainApp/templates/front_end/includes/login_form.html
@@ -4,7 +4,36 @@
 <div class="transparent-background">
   <div class="transparent-area"></div>
   <form action="" class="registration">
-
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-white">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <div class="form-group">
+      <label for="formGroupExampleInput">Name</label>
+      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Your Name">
+    </div>
+    <div class="form-group">
+      <label for="formGroupExampleInput">Surname</label>
+      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Your Surname">
+    </div>
+    <div class="form-group">
+      <label for="formGroupExampleInput">Age</label>
+      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Your Age">
+    </div>
+    <div class="form-group">
+      <label for="formGroupExampleInput">Credit card</label>
+      <input type="text" class="form-control" id="formGroupExampleInput" placeholder=XXXXXXXXXXXXXXXX>
+    </div>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
   <div class="transparent-area"></div>
 </div>
