--- a/back_end/mainApp/templates/front_end/includes/nav_content.html
+++ b/back_end/mainApp/templates/front_end/includes/nav_content.html
@@ -1,9 +1,9 @@
-<div class="logo">
+<a href='' class="logo">
   <div class="in">⚔️<span>Venger</span>⚔️</div>
-</div>
+</a>
 <div class=links>
   <div class="top-links">
-    <a href="">help</a>
+    <a href="help/">help</a>
     <span class="delimiter">|</span>
     <a href="">orders</a>
     <!-- <span class="delimiter">|</span> -->
