--- a/back_end/mainApp/templates/front_end/index.html
+++ b/back_end/mainApp/templates/front_end/index.html
@@ -7,18 +7,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>⚔️🛡VengerStore</title>
   {% load staticfiles %}
-  <link rel="stylesheet" href="{% static 'css/imports.css'%}">
+  <link rel="stylesheet" href="{% static 'mainApp/css/imports.css'%}">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="{% static 'js/main.js'%}"></script>
-  <script type="text/javascript" src="{% static 'js/login.js'%}"></script>
+  <script type="text/javascript" src="{% static 'mainApp/js/main.js'%}"></script>
+  <script type="text/javascript" src="{% static 'mainApp/js/login.js'%}"></script>
 </head>
 
 
 <body>
-  <canvas class="anime"></canvas>
-  <script src="{% static 'js/BackCircles.js'%}"></script>
+  <!-- <canvas class="anime"></canvas>
+  <script src="{% static 'mainApp/js/BackCircles.js'%}"></script> -->
 
   <div class="nav-container">
     <nav id="main-nav">
@@ -26,10 +25,11 @@
     </nav>
   </div>
   <div id="main-container">
+{% include "front_end\includes\help.html"%}
 
   </div>
   <footer id="main-footer">
-    <!-- TODO:footer -->
+    {% include "front_end\includes\footer.html"%}
   </footer>
 
 </body>
