--- a/back_end/mainApp/templates/front_end/includes/nav_content.html
+++ b/back_end/mainApp/templates/front_end/includes/nav_content.html
@@ -1,9 +1,9 @@
-<a href='' class="logo">
+<a href='http://127.0.0.1:8000/' class="logo">
   <div class="in">⚔️<span>Venger</span>⚔️</div>
 </a>
 <div class=links>
   <div class="top-links">
-    <a href="help/">help</a>
+    <a href="{{help}}">help</a>
     <span class="delimiter">|</span>
     <a href="">orders</a>
     <!-- <span class="delimiter">|</span> -->
