--- a/back_end/mainApp/static/mainApp/css/nav.css
+++ b/back_end/mainApp/static/mainApp/css/nav.css
@@ -1,3 +1,7 @@
+.nav-container {
+  grid-area: "nav";
+}
+
 #main-nav {
   display: flex;
   /* flex-wrap: wrap; */
@@ -112,24 +116,28 @@
   display: flex;
   position: relative;
   z-index: 1;
-  justify-content:  flex-start;
+  justify-content: flex-start;
 }
-.hiden-part .ul-container section{
+
+.hiden-part .ul-container section {
   display: flex;
   flex-direction: column;
   /* align-content: flex-start; */
 }
-.hiden-part .ul-container h2{
+
+.hiden-part .ul-container h2 {
   /* display: flex;
   flex-direction: column; */
   margin-bottom: -10px;
   align-self: center;
 }
-.hiden-part .ul-container ul{
+
+.hiden-part .ul-container ul {
   /* align-self: flex-start; */
   margin: 20px 30px;
 }
-.hiden-part .ul-container li{
-list-style-type: none;
-margin: 10px 0;
+
+.hiden-part .ul-container li {
+  list-style-type: none;
+  margin: 10px 0;
 }
