--- a/back_end/mainApp/static/mainApp/css/nav.css
+++ b/back_end/mainApp/static/mainApp/css/nav.css
@@ -13,7 +13,6 @@
   z-index: 10;
   position: fixed;
   width: 100%;
-  /* position: sticky; */
   top: 0;
   right: 0;
 }
@@ -77,7 +76,7 @@
 }
 
 #main-nav .delimiter {
-  margin: 0 10px;
+  margin: 0 15px;
 }
 
 #log-in {
@@ -113,31 +112,33 @@
 }
 
 .hiden-part .ul-container {
-  display: flex;
   position: relative;
   z-index: 1;
-  justify-content: flex-start;
+  box-sizing: border-box;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
-
+/*
 .hiden-part .ul-container section {
   display: flex;
   flex-direction: column;
-  /* align-content: flex-start; */
+  /* align-content: flex-start;
 }
 
 .hiden-part .ul-container h2 {
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
   margin-bottom: -10px;
   align-self: center;
 }
 
 .hiden-part .ul-container ul {
-  /* align-self: flex-start; */
+  align-self: flex-start;
   margin: 20px 30px;
 }
 
 .hiden-part .ul-container li {
   list-style-type: none;
   margin: 10px 0;
-}
+} */
