--- a/back_end/mainApp/templates/front_end/index.html
+++ b/back_end/mainApp/templates/front_end/index.html
@@ -14,6 +14,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="{% static 'mainApp/js/main.js'%}"></script>
   <script type="text/javascript" src="{% static 'mainApp/js/login.js'%}"></script>
+  <script type="text/javascript" src="{% static 'mainApp/js/bootstrap.min.js'%}"></script>
 </head>
 
 
@@ -27,12 +28,9 @@
   </div>
   <div id="main-container">
 {% include "front_end\includes\help.html"%}
-{% for i in goods %}
-<div>  {{i.name}}</div>
-{% endfor %}
-<!-- <canvas class="anime"></canvas>
-<script src="{% static 'mainApp/js/BackCircles.js'%}" async></script> -->
-
+{% include "front_end\includes\goods_content.html"%}
+<canvas class="anime"></canvas>
+<script src="{% static 'mainApp/js/BackCircles.js'%}" async></script>
 
   </div>
   <footer id="main-footer">
