--- a/back_end/mainApp/templates/front_end/includes/login_form.html
+++ b/back_end/mainApp/templates/front_end/includes/login_form.html
@@ -1,9 +1,14 @@
-<div id="log-in" href="#">
+<div id="log-in" href="/reristration">
+  {% if user.is_authenticated %}
+  {{ user.username }}
+  {% else %}
   log in <i id="logo-icon" class="far fa-user"></i>
+  {% endif %}
 </div>
+
 <div class="transparent-background">
   <div class="transparent-area"></div>
-  <form action="" class="registration">
+  <form action="" class="registration" method="POST">
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
@@ -28,10 +33,6 @@
     <div class="form-group">
       <label for="formGroupExampleInput">Credit card</label>
       <input type="text" class="form-control" id="formGroupExampleInput" placeholder=XXXXXXXXXXXXXXXX>
-    </div>
-    <div class="form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
