--- a/back_end/mainApp/templates/front_end/includes/nav_content.html
+++ b/back_end/mainApp/templates/front_end/includes/nav_content.html
@@ -1,4 +1,4 @@
-<a href='http://127.0.0.1:8000/' class="logo">
+<a href='/' class="logo">
   <div class="in">⚔️<span>Venger</span>⚔️</div>
 </a>
 <div class=links>
