--- a/back_end/mainApp/templates/front_end/includes/nav_content.html
+++ b/back_end/mainApp/templates/front_end/includes/nav_content.html
@@ -45,35 +45,14 @@
         <div class="hiden-part">
           <canvas class="bubbles"></canvas>
           <div class="ul-container">
-            <section>
-              <h2>Title</h2>
-              <ul>
-                <li>section.0.0</li>
-                <li>section.0.1</li>
-                <li>section.0.2</li>
-                <li>section.0.3</li>
-              </ul>
-            </section>
-            <section>
-              <h2>Title</h2>
-              <ul>
-                <li>section.0.0</li>
-                <li>section.0.1</li>
-                <li>section.0.2</li>
-                <li>section.0.3</li>
-              </ul>
-            </section>
-            <section>
-              <h2>Title</h2>
-              <ul>
-                <li>section.0.0</li>
-                <li>section.0.1</li>
-                <li>section.0.2</li>
-                <li>section.0.3</li>
-              </ul>
-            </section>
+            <form action="" method="get">
+              <div class="form-group">
+                <!-- <label for="formGroupExampleInput">Surname</label> -->
+                <input type="text" class="form-control" name='good_name_by_regular' placeholder="Search">
+                <button type="submit" name='is_filter' value="filter" class="btn btn-primary">Submit</button>
+              </div>
+            </form>
           </div>
-
         </div>
       </div>
     </section>
