--- a/back_end/mainApp/static/mainApp/css/container.css
+++ b/back_end/mainApp/static/mainApp/css/container.css
@@ -67,6 +67,10 @@
   text-overflow: ellipsis; /* Добавляем многоточие */
   max-width: 230px;
 }
+.text-what-i-need:hover{
+  /* white-space:normal; */
+  overflow:visible;
+}
 .content .img {
   width: 100px;
   height: 200px;
@@ -82,6 +86,7 @@
 .content .article {
   grid-area: article;
   justify-self: start;
+  max-width: 150px;
 }
 
 .content .size {
@@ -103,4 +108,8 @@
 
 .content .counter {
   grid-area: counter;
+  text-transform: capitalize;
+}
+.content .counter .btn{
+  text-transform: inherit;
 }
