--- a/back_end/mainApp/static/mainApp/css/login.css
+++ b/back_end/mainApp/static/mainApp/css/login.css
@@ -8,7 +8,9 @@
   padding-left: 5px;
   padding-right: 8px;
 }
-
+#profile{
+  margin: 0 30px 0 30px;
+}
 .transparent-background {
   width: 100vw;
   height: 100vh;
