--- a/back_end/mainApp/templates/front_end/index.html
+++ b/back_end/mainApp/templates/front_end/index.html
@@ -29,8 +29,8 @@
   <div id="main-container">
 {% include "front_end\includes\help.html"%}
 {% include "front_end\includes\goods_content.html"%}
-<canvas class="anime"></canvas>
-<script src="{% static 'mainApp/js/BackCircles.js'%}" async></script>
+<!-- <canvas class="anime"></canvas>
+<script src="{% static 'mainApp/js/BackCircles.js'%}" async></script> -->
 
   </div>
   <footer id="main-footer">
