--- a/back_end/mainApp/templates/front_end/includes/login_form.html
+++ b/back_end/mainApp/templates/front_end/includes/login_form.html
@@ -1,39 +1,44 @@
 {% if user.is_authenticated %}
 <div id="profile">{{ user.username }}</div>
 {% else %}
-<div id="log-in" href="/reristration">
+<div id="log-in">
   log in <i id="logo-icon" class="far fa-user"></i>
 </div>
 {% endif %}
 <div class="transparent-background">
   <div class="transparent-area"></div>
   <form action="" class="registration" method="POST">
+    {% csrf_token %}
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <input type="email" name='my_login_email' class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
       <small id="emailHelp" class="form-text text-white">We'll never share your email with anyone else.</small>
     </div>
     <div class="form-group">
+      <label for="formGroupExampleInput">Nik Name</label>
+      <input type="text" name='my_login_nik' class="form-control" id="formGroupExampleInput" placeholder="Your Nik Name" required>
+    </div>
+    <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+      <input type="password" name='my_login_password' class="form-control" id="exampleInputPassword1" placeholder="Password" required>
     </div>
     <div class="form-group">
       <label for="formGroupExampleInput">Name</label>
-      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Your Name">
+      <input type="text" name='my_login_name' class="form-control" id="formGroupExampleInput" placeholder="Your Name" required>
     </div>
     <div class="form-group">
       <label for="formGroupExampleInput">Surname</label>
-      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Your Surname">
+      <input type="text" name='my_login_surname' class="form-control" id="formGroupExampleInput" placeholder="Your Surname" required>
     </div>
     <div class="form-group">
       <label for="formGroupExampleInput">Age</label>
-      <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Your Age">
+      <input type="text" name='my_login_age' class="form-control" id="formGroupExampleInput" placeholder="Your Age">
     </div>
-    <div class="form-group">
+    <!-- <div class="form-group">
       <label for="formGroupExampleInput">Credit card</label>
       <input type="text" class="form-control" id="formGroupExampleInput" placeholder=XXXXXXXXXXXXXXXX>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    </div> -->
+    <button type="submit" name='my_login' value="1" class="btn btn-primary">Submit</button>
   </form>
   <div class="transparent-area"></div>
 </div>
