--- a/back_end/mainApp/static/mainApp/css/container.css
+++ b/back_end/mainApp/static/mainApp/css/container.css
@@ -72,6 +72,7 @@
 .text-what-i-need:hover{
   /* white-space:normal; */
   overflow:visible;
+  color:rgb(255, 0, 0);  
 }
 .content .img {
   width: 100px;
