--- a/back_end/mainApp/templates/front_end/includes/goods_content.html
+++ b/back_end/mainApp/templates/front_end/includes/goods_content.html
@@ -13,4 +13,7 @@
   <div class="counter"><button type="button" class="btn btn-success">Add to cart</button></div>
   </div>
   {% endfor %}
+  <form metod="get" action="" class="adding-button">
+
+  </form>
 </div>
