--- a/back_end/mainApp/templates/front_end/includes/goods_content.html
+++ b/back_end/mainApp/templates/front_end/includes/goods_content.html
@@ -1,4 +1,4 @@
-<!-- {% include "front_end\includes\slider.html"%} -->
+<!-- {% include "front_end/includes/slider.html"%} -->
 <div class="content-wraper">
   {% load staticfiles %}
   {% for i in goods %}
