--- a/back_end/mainApp/templates/front_end/includes/nav_content.html
+++ b/back_end/mainApp/templates/front_end/includes/nav_content.html
@@ -9,7 +9,7 @@
     <a href="">orders</a>
     {% endif %}
     <!-- <span class="delimiter">|</span> -->
-    {% include "front_end\includes\login_form.html"%}
+    {% include "front_end/includes/login_form.html"%}
   </div>
 
   <div class="bot-links">
