--- a/back_end/mainApp/templates/front_end/index.html
+++ b/back_end/mainApp/templates/front_end/index.html
@@ -23,18 +23,18 @@
 <div class="body">
   <div class="nav-container">
     <nav id="main-nav">
-      {% include "front_end\includes\nav_content.html"%}
+      {% include "front_end/includes/nav_content.html"%}
     </nav>
   </div>
   <div id="main-container">
-{% include "front_end\includes\help.html"%}
-{% include "front_end\includes\goods_content.html"%}
+{% include "front_end/includes/help.html"%}
+{% include "front_end/includes/goods_content.html"%}
 <!-- <canvas class="anime"></canvas>
 <script src="{% static 'mainApp/js/BackCircles.js'%}" async></script> -->
 
   </div>
   <footer id="main-footer">
-    {% include "front_end\includes\footer.html"%}
+    {% include "front_end/includes/footer.html"%}
   </footer>
 </div>
 </body>
