--- a/back_end/mainApp/templates/front_end/includes/nav_content.html
+++ b/back_end/mainApp/templates/front_end/includes/nav_content.html
@@ -1,7 +1,8 @@
 <a href='/' class="logo">
   <div class="in">⚔️<span>Venger</span>⚔️</div>
 </a>
-<div class=links>
+
+<div class="links">
   <div class="top-links">
     <a href="{{help}}">help</a>
     {% if user.is_authenticated %}
