--- a/back_end/mainApp/templates/front_end/includes/nav_content.html
+++ b/back_end/mainApp/templates/front_end/includes/nav_content.html
@@ -15,7 +15,7 @@
 
   <div class="bot-links">
     <section class="section">
-      <a href="">products type</a>
+      <a href="#">products type</a>
       <div class="hiden-part">
         <canvas class="bubbles"></canvas>
         <div class="ul-container">
@@ -29,7 +29,7 @@
     </section>
 
     <section class="section">
-      <a href="">firms</a>
+      <a href="#">firms</a>
       <div class="hiden-part">
         <canvas class="bubbles"></canvas>
         <div class="ul-container">
@@ -43,7 +43,7 @@
     </section>
 
     <section class="section">
-      <a href="">filter</a>
+      <a href="#">filter</a>
       <div class="hiden-part">
         <div class="hiden-part">
           <canvas class="bubbles"></canvas>
