--- a/back_end/mainApp/static/mainApp/css/media_telephone.css
+++ b/back_end/mainApp/static/mainApp/css/media_telephone.css
@@ -44,7 +44,7 @@
       /* margin: 0 5px; */
   }
   .section:hover .hiden-part{
-    /* display: none; */
+    display: none;
   }
   .hiden-part .ul-container{
     grid-template-columns: 1fr;
